fdo#74431 : Captions' are preserved but remove a space

For the below captions :
ALPHABETIC
alphabetic
ROMAN
roman
ARABIC
in document.xml, captions were added as
<w:instrText xml:space="preserve"> SEQ "scientific" *ROMAN </w:instrText>
-no space after *
-Double quotes added for scientific
-For Caption ARABIC, it was comming as
<w:instrText xml:space="preserve"> SEQ scientific *Arabic </w:instrText>
it should be
<w:instrText xml:space="preserve"> SEQ scientific * ARABIC </w:instrText>
- After adding the above code, anchor value for a hyperlink tag was getting
corrupted. So aaded a fix for that.
UT which was failing due to above code changes :testBnc834035
"equality assertion failed
- Expected: _Toc363553908
- Actual  : Figure!1|sequence"

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7839

Change-Id: I9124eefa0ae63baf7ee3eaa2148f3c739d6fa699