sw/source/filter/ww8/docxattributeoutput.cxx
@@ -1431,7 +1431,7 @@ bool DocxAttributeOutput::StartURL( const OUString& rUrl, const OUString& rTarge
                 if (nPos != -1)
                 {
                     // Extract <seqname>, the field instruction text has the name quoted.
-                    OUString aSequenceName = OUString('"') + sMark.copy(0, nPos) + OUString('"');
+                    OUString aSequenceName = sMark.copy(0, nPos);
                     // Extract <index>.
                     sal_uInt32 nIndex = sMark.copy(nPos + 1, sMark.getLength() - nPos - sizeof("|sequence")).toInt32();
                     std::map<OUString, std::vector<OString> >::iterator it = m_aSeqBookmarksNames.find(aSequenceName);
